--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -71,7 +71,7 @@
 
 @media (max-width: 768px) {
   .projects-page {
-    padding: 3em 1em;
+    padding: 2em 1em;
   }
 
   .page-title {
